# DrawdownImpacts

./: README.md  environment.yml  postBuild  pyproject.toml
data/emissions/solutions/: GWP_conversions.xlsx  adoption.csv  reduced_emissions.csv
data/explorer-website/: drawdown_adoption_ranges.xlsx  ~$drawdown_adoption_ranges.xlsx
drawdown/: __init__.py  explorer.py
notebooks/: Aerosols.ipynb  Drawdown.ipynb  Examples.ipynb  TLC.ipynb
utils/: CEDS.py  zenodo.py
